--- a/src/pages/es/playground/index.astro
+++ b/src/pages/es/playground/index.astro
@@ -85,8 +85,10 @@ import Layout from "../../../layouts/Layout.astro";
             >
               <option value="bottom-right">Abajo a la Derecha</option>
               <option value="bottom-left">Abajo a la Izquierda</option>
+              <option value="bottom-center">Abajo centrado</option>
               <option value="top-right">Arriba a la Derecha</option>
               <option value="top-left">Arriba a la Izquierda</option>
+              <option value="top-center">Arriba centrado</option>
             </select>
           </label>
           <label class="w-full overflow-h block my-2">
@@ -106,7 +108,6 @@ import Layout from "../../../layouts/Layout.astro";
             <input
               type="number"
               placeholder="3000"
-              value="50000"
               id="timeScreen"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
