--- a/src/pages/playground/index.astro
+++ b/src/pages/playground/index.astro
@@ -85,8 +85,10 @@ import Layout from "../../layouts/Layout.astro";
             >
               <option value="bottom-right">Bottom Right</option>
               <option value="bottom-left">Bottom Left</option>
+              <option value="bottom-center">Bottom Center</option>
               <option value="top-right">Top Right</option>
               <option value="top-left">Top Left</option>
+              <option value="top-center">Top Center</option>
             </select>
           </label>
           <label class="w-full overflow-h block my-2">
