--- a/src/lib/bell.copy.css
+++ b/src/lib/bell.copy.css
@@ -14,92 +14,124 @@
 /* Customs Properties para el bell */
 
 :root {
-  --bell_title: rgba(10, 10, 10, 0.7);
-  --bell_description: rgba(100, 100, 100, 0.65);
-  --bell_bg: rgba(255, 255, 255, 1);
-  --bell_border: rgba(0, 0, 0, 0.05);
+  --t_w: 350px;
+  --b_t: rgba(10, 10, 10, 1);
+  --b_d: rgba(100, 100, 100, 0.7);
+  --b_bg: rgba(255, 255, 255, 1);
+  --b_br: rgba(100, 100, 100, 0.25);
+  --t_an: 5000ms;
 }
 html.dark{
-  --bell_title: rgba(10, 10, 10, 0.7);
-  --bell_description: rgba(100, 100, 100, 0.65);
-  --bell_bg: rgba(255, 255, 255, 1);
-  --bell_border: rgba(0, 0, 0, 0.05);
+  --b_t: rgba(10, 10, 10, 0.7);
+  --b_d: rgba(100, 100, 100, 0.65);
+  --b_bg: rgba(255, 255, 255, 1);
+  --b_br: rgba(0, 0, 0, 0.05);
 }
+
+/* Parent of bell */
+
+.b_p{
+  z-index: 10;
+  position: fixed;
+  padding: 10px;
+  --height-parent: 0px;
+  width: 350px;
+  height: 0;
+}
+.b_p:hover{
+  height: var(--height-parent);
+}
+
 /* Contenerdor del bell */
 
-.bell_container {
+.b_c {
   cursor: pointer;
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
-  justify-self: start;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
   padding: 16px 14px;
   width: 350px;
+  overflow: hidden;
   height: fit-content;
-  border: 1px ridge var(--bell_border);
+  border: 1px ridge var(--b_br);
   border-radius: 7px;
-  background-color: var(--bell_bg);
+  background-color: var(--b_bg);
   position: fixed;
   z-index: 100;
   opacity: 0;
-  transition: 0.15s opacity ease-in, 0.15s, top ease-in,0.15s bottom ease-in, 0.15s height ease-in;
-  box-shadow: 0 4px 12px rgb(88 88 88 /.08); 
+  transition: 0.15s all;
+  box-shadow: 0 4px 10px rgb(100 100 100 /.12); 
 }
-.bell_container.active:nth-last-child(n + 4){
-  opacity: 0;
+.b_c.timeline::before{
+  transition: .15s ease width;
+  opacity: 1;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  content: "";
+  height: 2px;
+  background: var(--b_t);
+  width: var(--t_w);
 }
-.bell_container:nth-last-child(2) > div,.bell_container:nth-last-child(3) > div{
+.b_c.timeline.init_count::before{
+  animation: timeline var(--t_an) ease forwards;
+  animation-duration: var(--t_an);
+}
+
+.b_c.active:nth-last-child(n + 4),.b_c.pending.timeline::before,.b_c:nth-last-child(2) > div,.b_c:nth-last-child(3) > div{
   opacity: 0;
   transition: 0.15s ease-in;
 }
-.bell_container:nth-last-child(2).hover > div,.bell_container:nth-last-child(3).hover > div{
+
+.b_p:hover .b_c:nth-last-child(2) > div,.b_p:hover .b_c:nth-last-child(3) > div, .b_p.expand .b_c:nth-last-child(2) > div,.b_p.expand .b_c:nth-last-child(3) > div{
   opacity: 1;
 }
-.bell_container.ease-in{
-  transition-timing-function: ease-in-out;
+.b_c.ease-in{
+  transition-timing-function: ease-in !important;
 }
-.bell_container.ease-in-out{
-  transition-timing-function: ease-in-out;
+.b_c.ease-in-out{
+  transition-timing-function: ease-in-out !important;
 }
-.bell_container.bound{
-  transition-timing-function: cubic-bezier(1, 0, 0, 1);
+.b_c.bound{
+  transition-timing-function: cubic-bezier(1, 0.08, 0, 0.96) !important;
 }
-.bell_container.bound-2{
-  transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
+.b_c.bound-2{
+  transition-timing-function: cubic-bezier(0.55, -0.57, 0.55, 1.58) !important;
 }
 /* Componentes del bellAlert */
 
-.bell_icon {
+.b_i {
   position: relative;
   height: 22px;
   width: 22px;
 }
-.bell_icon svg {
-  color: var(--bell_title);
-  fill:none !important;
+.b_i svg {
+  color: var(--bell_svg);
+  fill:currentColor;
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.bell_text-container {
+.b_t-c {
   position: relative;
   flex: 1;
+  line-height: 1.4;
   width: 200px;
   display: flex;
   flex-direction: column;
-  gap: 2px;
 }
-.bell_title {
+.b_t, .b_t_p {
   font-size: 15px;
   font-weight: 700;
-  color: var(--bell_title);
+  color: var(--b_t);
   padding: 0;
   margin: 0;
 }
-.bell_description {
-  color: var(--bell_description);
+.b_d {
+  color: var(--b_d);
+  font-weight:500;
   padding: 0;
   margin: 0;
   font-size: 14px;
@@ -110,80 +142,278 @@ html.dark{
 
 /* Posicionamiento del bell*/
 
-.bell_container.bottom-right {
+.b_c.bottom-right {
   bottom: -70px;
   right: 30px;
 }
-.bell_container.bottom-left {
+.b_p.bottom-right{
+  bottom: 30px;
+  right: 30px;
+}
+.b_c.bottom-left {
   bottom: -70px;
   left: 30px;
 }
-.bell_container.top-right {
+.b_p.bottom-left{
+  bottom: 30px;
+  left: 30px;
+}
+.b_c.top-right {
   top: -70px;
   right: 30px;
 }
-.bell_container.top-left {
+.b_p.top-right{
+  top: 30px;
+  right: 30px;
+}
+.b_c.top-left{
   top: -70px;
   left: 30px;
 }
-
-/* Tipos de bell */
-
-.bell_container.info {
-  --bell_svg: rgb(46 132 213);
-  --bell_title: rgb(46 132 213);
-  --bell_description: rgb(24 96 139 / 0.7);
-  --bell_bg: rgb(242 250 255);
-  --bell_border: rgba(8, 145, 199, 0.15);
+.b_p.top-left{
+  top: 30px;
+  left: 30px;
 }
-.bell_container.warning {
-  --bell_svg: rgb(199, 110, 8);
-  --bell_title: rgb(181, 99, 5);
-  --bell_description: rgba(139, 85, 24, 0.7);
-  --bell_bg: rgb(255 244 233);
-  --bell_border: rgba(199, 84, 8, 0.1);
+.b_c.top-center{
+  top: -70px;
+  left: calc(50vw - 175px);
 }
-.bell_container.error {
-  --bell_svg: rgb(199, 8, 8);
-  --bell_title: rgb(181, 5, 5, 0.9);
-  --bell_description: rgba(139, 24, 24, 0.65);
-  --bell_bg: rgb(255 240 240);
-  --bell_border: rgba(199, 8, 8, 0.05);
+.b_p.top-center{
+  top: 30px;
+  left: calc(50vw - 175px);
 }
-.bell_container.check {
-  --bell_svg: rgb(8, 199, 18);
-  --bell_title: rgb(10 127 0);
-  --bell_description: rgba(43, 139, 24, 0.7);
-  --bell_bg: rgb(241, 255, 245);
-  --bell_border: rgba(24, 199, 8, 0.1);
+.b_c.bottom-center{
+  bottom: -70px;
+  left: calc(50vw - 175px);
+}
+.b_p.bottom-center{
+  bottom: 30px;
+  left: calc(50vw - 175px);
 }
 
 /* Transiciones para el bell */
 
-.bell_container.active {
+.b_c.active {
   opacity: 1;
 }
-.bell_container.active.bottom-right,
-.bell_container.active.bottom-left {
+.b_c.active.bottom-right,
+.b_c.active.bottom-left,.b_c.active.bottom-right,
+.b_c.active.bottom-left,.b_c.active.bottom-center {
   bottom: 30px;
   --top:30px;
 }
-.bell_container.active.top-right,
-.bell_container.active.top-left {
+.b_c.active.top-right,
+.b_c.active.top-left,.b_c.active.top-right,
+.b_c.active.top-left,.b_c.active.top-center {
   top: 30px;
   --top:30px;
 }
-.bell_container.active.hover{
+.b_p:hover .b_c.active, .b_p.expand .b_c.active{
   opacity: 1;
   height: auto !important;
   scale: 1 !important;
 }
-.bell_container.top-right.active.hover,
-.bell_container.top-left.active.hover {
+.b_p:hover .b_c.top-right.active,
+.b_p:hover .b_c.top-center.active,
+.b_p:hover .b_c.top-left.active, .b_p:hover .b_c.top-center.active, .b_p.expand .b_c.top-right.active, .b_p.expand .b_c.top-center.active, .b_p.expand .b_c.top-left.active, .b_p.expand .b_c.top-center.active {
   top: var(--top) !important;
 }
 
-.bell_container.bottom-right.active.hover,
-.bell_container.bottom-left.active.hover {
+.b_p:hover .b_c.bottom-right.active,
+.b_p:hover .b_c.bottom-center.active,
+.b_p:hover .b_c.bottom-left.active, .b_p:hover .b_c.bottom-center.active, .b_p.expand .b_c.bottom-right.active, .b_p.expand .b_c.bottom-center.active, .b_p.expand .b_c.bottom-left.active, .b_p.expand .b_c.bottom-center.active {
   bottom: var(--top) !important;
+}
+
+@keyframes spin-svg{
+  to{
+    transform: rotate(0) translateY(-50%);
+  }from{
+    transform: rotate(360deg) translateY(-50%);
+  }
+}
+
+@keyframes timeline{
+  to{
+    width: 0%;
+  }from{
+    width: 100%;
+  }
+}
+
+.b_c.pending .b_t-c .b_t,
+.b_c.pending .b_t-c .b_d,
+.b_c.pending .b_i > svg{
+  opacity: 0;
+}
+.b_c.pending .b_i > svg{
+  scale: .8;
+}
+.b_t_p{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.promise{
+  height: 100%;
+  width: 100%;
+  transform-origin: top;
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  animation: 1s spin-svg infinite;
+}
+.complete .b_t_p, .complete.promise svg{
+  opacity: 0;
+}
+.b_t, .b_i svg{
+  transition: .3s cubic-bezier(0.25, 0.1, 1, 1.97) all;
+}
+.complete .b_i{
+  animation: animate-svg .3s backwards;
+}
+@keyframes animate-svg{
+  0%{
+    opacity: 0;
+    scale: .8;
+  }70%{
+    opacity: 1;
+    scale: 1.1;
+  }
+  100%{
+    scale: 1;
+  }
+}
+
+
+/* Temas */
+
+/* Theme Colors */
+
+.b_c.colors.info{
+  --b_bg: rgb(57 167 213);
+  --b_d: rgb(238 247 255);
+  --bell_svg:rgb(255 255 255);
+  --b_t:rgb(255 255 255);
+}
+.b_c.warning.colors{
+  --b_bg: rgb(255 144 72);;
+  --b_d: rgb(255 247 239 / 90%);
+  --b_t:rgb(255 255 255);
+  --bell_svg:rgb(255 255 255);
+}
+.b_c.error.colors{
+  --b_bg: rgb(196 48 48);
+  --b_d: rgb(238 247 255 / 80%);
+  --b_t:rgb(255 255 255);
+  --bell_svg:rgb(255 255 255);
+}
+.b_c.success.colors{
+  --b_bg: rgb(41 173 65);
+  --b_d: rgb(248 255 247 / 96%);
+  --b_t:rgb(255 255 255);
+  --bell_svg:rgb(56 167 40);
+}
+
+/* Theme Light */
+
+.b_c.light.info{
+  --b_bg: rgb(255 255 255);
+  --b_d: rgb(120 120 120);
+  --bell_svg:rgb(48 160 207);
+  --b_t:rgb(40 40 40);
+  border:none;
+}
+.b_c.warning.light{
+  --b_bg: rgb(255 255 255);
+  --b_d: rgb(120 120 120);
+  --b_t:rgb(40 40 40);
+  --bell_svg:rgb(200 96 34);
+  border:none;
+}
+.b_c.error.light{
+  --b_bg: rgb(255 255 255);
+  --b_d: rgb(120 120 120);
+  --b_t:rgb(40 40 40);
+  --bell_svg:rgb(205 53 53);
+  border:none;
+}
+.b_c.success.light{
+  --b_bg: rgb(255 255 255);
+  --b_d: rgb(120 120 120);
+   --b_t:rgb(40 40 40);
+  --bell_svg:#4CAF50;
+  border:none;
+}
+
+/* Theme Chacka */
+
+.b_c.chacka.info{
+  --b_bg: rgb(199 245 255);
+  --b_d: rgb(6 47 58 /.8);
+  --bell_svg:rgb(48 160 207);
+  --b_t:rgb(6 47 58);
+  border:none;
+}
+.b_c.warning.chacka{
+  --b_bg: rgb(255 226 174);
+  --b_d: rgb(72 37 3/.8);
+  --b_t:rgb(72 37 3);
+  --bell_svg:rgb(162 87 0);
+  border:none;
+}
+.b_c.error.chacka{
+  --b_bg: rgb(255 212 212);
+  --b_d: rgb(67 6 6/.8);
+  --b_t:rgb(67 6 6);
+  --bell_svg:rgb(162 0 0);
+  border:none;
+}
+.b_c.success.chacka{
+  --b_bg: rgb(198 255 229);
+  --b_d: rgb(3 69 39/.8);
+  --b_t:rgb(3 69 39);
+  --bell_svg:rgb(0 162 91);
+  border:none;
+}
+
+/* Theme Default */
+
+.b_c.b_full{
+  border-radius: 12px;
+}
+.b_c.b_none{
+  border-radius: 0;
+}
+
+/* Tipos de bell */
+
+.b_c.info {
+  --bell_svg: rgb(14 105 190);
+  --b_t: rgb(20 114 202);
+  --b_d: rgb(24 96 139 / 0.7);
+  --b_bg: rgb(245 252 255);
+  --b_br: rgba(8, 145, 199, 0.35);
+}
+.b_c.warning {
+  --bell_svg: rgb(160 62 0);
+  --b_t: rgb(160 62 0);
+  --b_d: rgba(139, 85, 24, 0.7);
+  --b_bg: rgb(255 248 235);
+  --b_br: rgba(199, 84, 8, 0.3);
+}
+.b_c.error {
+  --bell_svg: rgb(199, 8, 8);
+  --b_t: rgb(181, 5, 5, 0.9);
+  --b_d: rgba(139, 24, 24, 0.65);
+  --b_bg: rgb(255 245 245);
+  --b_br: rgba(199, 8, 8, 0.3);
+}
+.b_c.success {
+  --bell_svg: rgb(8, 199, 18);
+  --b_t: rgb(10 127 0);
+  --b_d: rgba(43, 139, 24, 0.7);
+  --b_bg: rgb(246, 255, 250);
+  --b_br: rgb(53 137 0 / .35);
 }
