--- a/src/pages/es/playground/index.astro
+++ b/src/pages/es/playground/index.astro
@@ -21,6 +21,7 @@ import Layout from "../../../layouts/Layout.astro";
             <input
               type="text"
               id="title"
+              value="holas"
               placeholder="BellJs"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
@@ -30,6 +31,7 @@ import Layout from "../../../layouts/Layout.astro";
             <input
               type="text"
               id="description"
+              value="lorem ipsumsas"
               placeholder="Alerta agnostica al entorno Js"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
@@ -41,7 +43,7 @@ import Layout from "../../../layouts/Layout.astro";
               id="type"
             >
               <option value="info">Informacion</option>
-              <option value="check">Correcto</option>
+              <option value="success">Correcto</option>
               <option value="warning">Peligro</option>
               <option value="error">Error</option>
             </select>
@@ -73,6 +75,7 @@ import Layout from "../../../layouts/Layout.astro";
             <input
               type="number"
               placeholder="300"
+              value="300"
               id="transitionDuration"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
@@ -109,6 +112,7 @@ import Layout from "../../../layouts/Layout.astro";
               type="number"
               placeholder="3000"
               id="timeScreen"
+              value="100000"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
           </label>
@@ -136,6 +140,78 @@ import Layout from "../../../layouts/Layout.astro";
 </Layout>
 <script>
   import '../../../lib/playground.ts'
+  import Bell from "../../../lib/index.js"
+
+  // const bell = new Bell({
+  //   title: "hola",
+  //   description: "mundiño"
+  // },"warning",{
+  //   timeScreen: 500000,
+  //   animate: true,
+  //   isColored: true,
+  //   theme: "colors"
+  // }).launch()
+  // const promise = new Promise((resolve,reject) =>{
+  //   setTimeout(()=>{
+  //       reject()
+  //   },1000)
+  // })
+  // const state = {
+  //   pending:"Promesa pendiente",
+  //   success:"Promesa resuelta",
+  //   error:"Promesa erronea"
+  // }
+
+  // const bell = new Bell({
+  //   title:"Hola mundo",
+  //   description:"msaij"
+  // },"info",{
+  //   timeScreen: 30000,
+  //   animate: true,
+  //   customClass: "bellow",
+  //   timeline: true,
+  //   position: "bottom-right",
+  //   transitionDuration: 300,
+  // })
+  // bell.promise(promise, state)
+
+  // setTimeout(()=>{
+  //   const promise2 = new Promise((resolve,reject) =>{
+  //   setTimeout(()=>{
+  //       resolve()
+  //   },2000)
+  // })
+  // const state = {
+  //   pending:"Promesa pendiente",
+  //   success:"Promesa resuelta",
+  //   error:"Promesa erronea"
+  // }
+
+  // const bell2 = new Bell({
+  //   title:"Hola mundo",
+  //   description:"msaij"
+  // },"info",{
+  //   timeScreen: 15000,
+  //   animate: true,
+  //   customClass: "bellow",
+  //   borderRadius: "b_none",
+  //   theme: "colors",
+  //   position: "bottom-right",
+  //   transitionDuration: 300,
+  // })
+  // bell2.promise(promise2, state)
+
+  // },2000)
+  // const type= ["success","error","warning","info"]
+  //     const bell = new Bell({
+  //     title: "Bell is now",
+  //     description: "Time of fun"
+  //   },"warning",{
+  //     theme: "chacka",
+  //     typeAnimation:"bound-2",
+  //     animate: true,
+  //     timeScreen: 100000
+  //   }).launch()
 </script>
 <style>
   body {
